<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">广工新生手册</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_main">大学城校区</string>
    <string name="button_main1">321开学啦</string>
    <string name="button_main2">学习攻略</string>
    <string name="button_main3">生活Tips</string>
    <string name="button_main4">校园Views</string>
    <string name="button_main5">关于</string>
</resources>
