<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background1"
    tools:context=".Main" >

     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_above="@+id/button5"
         android:layout_alignLeft="@+id/button5"
         android:layout_alignRight="@+id/button5"
         android:layout_marginBottom="16dp"
         android:text="@string/button_main4"
         android:background="@drawable/button_long" />

     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_above="@+id/button4"
         android:layout_alignLeft="@+id/button4"
         android:layout_alignRight="@+id/button4"
         android:layout_marginBottom="16dp"
         android:text="@string/button_main3"
         android:background="@drawable/button_long" />

     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_above="@+id/button3"
         android:layout_alignLeft="@+id/button3"
         android:layout_alignRight="@+id/button3"
         android:layout_marginBottom="16dp"
         android:text="@string/button_main2"
         android:background="@drawable/button_long" />

     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_above="@+id/button2"
         android:layout_alignLeft="@+id/button2"
         android:layout_alignRight="@+id/button2"
         android:layout_marginBottom="16dp"
         android:text="@string/button_main1"
         android:background="@drawable/button_long" />

     <Button
         android:id="@+id/button5"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_long"
         android:text="@string/button_main5" />

</RelativeLayout>
